--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,9 @@
 {
-    "editor.defaultFormatter": "rust-lang.rust",
-    "editor.formatOnSave": true,
-    "editor.fontSize": 16,
     "files.watcherExclude": {
         ".vue": true,
         "*.vue": true
     },
+    "files.exclude": {
+        "target": true,
+    }
 }
