--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,19 +6,19 @@ edition = "2018"
 
 
 [dependencies]
-actix = "0.8.1"
-actix-web = "1.0.0-beta.4"
-actix-web-actors = "1.0.0-beta.4"
-actix-files = "0.1.0-beta.4"
+actix = "0.8.3"
+actix-web = "1.0.5"
+actix-web-actors = "1.0.2"
+actix-files = "0.1.4"
 
-rand = "0.6"
-bytes = "0.4"
-byteorder = "1.1"
-futures = "0.1"
-tokio-io = "0.1"
-tokio-tcp = "0.1"
-tokio-codec = "0.1"
-env_logger = "0.6"
-serde = "1.0"
-serde_json = "1.0"
-serde_derive = "1.0"
+rand = "0.7.0"
+bytes = "0.4.12"
+byteorder = "1.3.2"
+futures = "0.1.28"
+tokio-io = "0.1.12"
+tokio-tcp = "0.1.3"
+tokio-codec = "0.1.1"
+env_logger = "0.6.2"
+serde = "1.0.98"
+serde_json = "1.0.40"
+serde_derive = "1.0.98"
