--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-#DATABASE_URL=postgres://dlacjfrb:dlacjfrb@localhost:5432/dev
-DATABASE_URL=postgres://dlacjfrb:dlacjfrb@coffee-dbinstance.czunxjjslnrd.ap-northeast-2.rds.amazonaws.com/dev
+#DATABASE_URL=postgres://dlacjfrb:dlacjfrb@coffee-dbinstance.czunxjjslnrd.ap-northeast-2.rds.amazonaws.com/dev
+DATABASE_URL=postgres://dlacjfrb:dlacjfrb@db/dev
 URL_FRONTEND_CEO=http://localhost:3334
 URL_FRONTEND_USER=http://localhost:3333
 DOMAIN=0.0.0.0:3001
